swagger works on all endpoints
